--- a/package.json
+++ b/package.json
@@ -1,22 +1,13 @@
 {
   "name": "quizshow",
   "version": "0.1.0",
+  "main": "build/server.js",
   "private": true,
-  "dependencies": {
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.11",
-    "@types/react": "16.9.5",
-    "@types/react-dom": "16.9.1",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0",
-    "typescript": "3.6.3"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "npm run build && firebase deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +23,26 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@types/jest": "24.0.18",
+    "@types/node": "^12.7.11",
+    "@types/react": "16.9.5",
+    "@types/react-dom": "16.9.1",
+    "boardgame.io": "^0.33.2",
+    "firebase": "^7.1.0",
+    "mobx": "^5.14.0",
+    "mobx-react-lite": "^1.4.1",
+    "node-sass": "^4.12.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-firebase-hooks": "^2.1.0",
+    "react-scripts": "3.2.0",
+    "ts-node": "^8.4.1",
+    "typescript": "3.6.3"
+  },
+  "devDependencies": {
+    "firebase-tools": "^7.5.0",
+    "npm-run-all": "^4.1.5"
   }
 }
