--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-firebase-hooks": "^2.1.0",
+    "react-jss": "^10.0.0",
     "react-scripts": "3.2.0",
     "ts-node": "^8.4.1",
     "typescript": "3.6.3"
   },
   "devDependencies": {
+    "@types/react-jss": "^8.6.4",
     "firebase-tools": "^7.5.0",
     "npm-run-all": "^4.1.5"
   }
